# streamdock-n3

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  install_udev.sh  pyproject.toml  streamdock-linux.service  streamdock-n3-debug.py  streamdock-n3-gui.desktop  streamdock-n3-gui.py  streamdock-n3-linux.config.json  streamdock-n3-linux.py  streamdock-n3-linux.service  streamdock.config.json  streamdock_linux.py  streamdock_probe.py
.github/workflows/: ci.yml  release.yml
src/streamdock_n3/: __init__.py  config.py  daemon.py  debug_tool.py  events.py  gui.py  icons.py  paths.py  probe.py  system_install.py
src/streamdock_n3/_data/: 99-streamdock.rules  config.default.json  streamdock-n3-gui.desktop  streamdock-n3.service
src/streamdock_n3/_vendor/StreamDock/: ProductIDs.py
src/streamdock_n3/_vendor/StreamDock/Devices/: K1Pro.py  StreamDock.py  StreamDock293.py  StreamDock293V3.py  StreamDock293s.py  StreamDock293sV3.py  StreamDockM18.py  StreamDockM3.py  StreamDockN1.py  StreamDockN3.py  StreamDockN4.py  StreamDockN4Pro.py  StreamDockXL.py
src/streamdock_n3/_vendor/StreamDock/Transport/: LibUSBHIDAPI.py  test.py
src/streamdock_n3/_vendor/StreamDock/Transport/TransportDLL/: transport.lib
tests/: test_config.py  test_events.py  test_icons.py  test_strip_exec_codes.py
